@@ -39,7 +39,7 @@ public class FileToPdf {
                                     new String(fileBytes, StandardCharsets.UTF_8),
                                     customHtmlSanitizer);
                     tempHtmlFilePath = tempHtmlFile.getPath();
-                    Files.write(tempHtmlFilePath, sanitizedHtml.getBytes(StandardCharsets.UTF_8));
+                    Files.writeString(tempHtmlFilePath, sanitizedHtml);
                 } else if (fileName.toLowerCase(Locale.ROOT).endsWith(".zip")) {
                     tempExtractDir = new TempDirectory(tempFileManager);
                     tempHtmlFilePath =
@@ -87,13 +87,19 @@ public class FileToPdf {
             ZipEntry entry = zipIn.getNextEntry();
             while (entry != null) {
                 Path filePath = extractDir.resolve(sanitizeZipFilename(entry.getName()));
+                Path normalizedTargetDir = extractDir.toAbsolutePath().normalize();
+                Path normalizedFilePath = filePath.toAbsolutePath().normalize();
+                if (!normalizedFilePath.startsWith(normalizedTargetDir)) {
+                    throw new IOException(
+                            "Zip entry path escapes target directory: " + entry.getName());
+                }
                 if (!entry.isDirectory()) {
                     Files.createDirectories(filePath.getParent());
                     String entryNameLower = entry.getName().toLowerCase(Locale.ROOT);
                     if (entryNameLower.endsWith(".html") || entryNameLower.endsWith(".htm")) {
                         String content = new String(zipIn.readAllBytes(), StandardCharsets.UTF_8);
                         String sanitizedContent = sanitizeHtmlContent(content, customHtmlSanitizer);
-                        Files.write(filePath, sanitizedContent.getBytes(StandardCharsets.UTF_8));
+                        Files.writeString(filePath, sanitizedContent);
                         htmlFiles.add(filePath);
                     } else {
                         Files.copy(zipIn, filePath);
