@@ -4,17 +4,15 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -23,24 +21,27 @@ import stirling.software.SPDF.model.api.signature.SavedSignatureRequest;
 import stirling.software.SPDF.model.api.signature.SavedSignatureResponse;
 import stirling.software.common.configuration.InstallationPathConfig;
 
+import tools.jackson.databind.ObjectMapper;
+
 @Service
 @Slf4j
 public class SharedSignatureService {
 
+    private static final Pattern FILENAME_VALIDATION_PATTERN = Pattern.compile("^[a-zA-Z0-9_.-]+$");
     private final String SIGNATURE_BASE_PATH;
-    private final String ALL_USERS_FOLDER = "ALL_USERS";
+    private static final String ALL_USERS_FOLDER = "ALL_USERS";
     private final ObjectMapper objectMapper;
 
-    public SharedSignatureService() {
+    public SharedSignatureService(ObjectMapper objectMapper) {
         SIGNATURE_BASE_PATH = InstallationPathConfig.getSignaturesPath();
-        this.objectMapper = new ObjectMapper();
+        this.objectMapper = objectMapper;
     }
 
     public boolean hasAccessToFile(String username, String fileName) throws IOException {
         validateFileName(fileName);
         // Check if file exists in user's personal folder or ALL_USERS folder
-        Path userPath = Paths.get(SIGNATURE_BASE_PATH, username, fileName);
-        Path allUsersPath = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER, fileName);
+        Path userPath = Path.of(SIGNATURE_BASE_PATH, username, fileName);
+        Path allUsersPath = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER, fileName);
 
         return Files.exists(userPath) || Files.exists(allUsersPath);
     }
@@ -50,7 +51,7 @@ public class SharedSignatureService {
 
         // Get signatures from user's personal folder
         if (StringUtils.hasText(username)) {
-            Path userFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+            Path userFolder = Path.of(SIGNATURE_BASE_PATH, username);
             if (Files.exists(userFolder)) {
                 try {
                     signatures.addAll(getSignaturesFromFolder(userFolder, "Personal"));
@@ -61,7 +62,7 @@ public class SharedSignatureService {
         }
 
         // Get signatures from ALL_USERS folder
-        Path allUsersFolder = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+        Path allUsersFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
         if (Files.exists(allUsersFolder)) {
             try {
                 signatures.addAll(getSignaturesFromFolder(allUsersFolder, "Shared"));
@@ -88,7 +89,7 @@ public class SharedSignatureService {
      */
     public byte[] getSharedSignatureBytes(String fileName) throws IOException {
         validateFileName(fileName);
-        Path allUsersPath = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER, fileName);
+        Path allUsersPath = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER, fileName);
         if (!Files.exists(allUsersPath)) {
             throw new FileNotFoundException("Shared signature file not found");
         }
@@ -105,7 +106,7 @@ public class SharedSignatureService {
             throw new IllegalArgumentException("Invalid filename");
         }
         // Only allow alphanumeric, hyphen, underscore, and dot (for extensions)
-        if (!fileName.matches("^[a-zA-Z0-9_.-]+$")) {
+        if (!FILENAME_VALIDATION_PATTERN.matcher(fileName).matches()) {
             throw new IllegalArgumentException("Filename contains invalid characters");
         }
     }
@@ -113,7 +114,7 @@ public class SharedSignatureService {
     private String validateAndNormalizeExtension(String extension) {
         String normalized = extension.toLowerCase().trim();
         // Whitelist only safe image extensions
-        if (normalized.equals("png") || normalized.equals("jpg") || normalized.equals("jpeg")) {
+        if ("png".equals(normalized) || "jpg".equals(normalized) || "jpeg".equals(normalized)) {
             return normalized;
         }
         throw new IllegalArgumentException("Unsupported image extension: " + extension);
@@ -140,7 +141,7 @@ public class SharedSignatureService {
         }
 
         String folderName = "shared".equals(scope) ? ALL_USERS_FOLDER : username;
-        Path targetFolder = Paths.get(SIGNATURE_BASE_PATH, folderName);
+        Path targetFolder = Path.of(SIGNATURE_BASE_PATH, folderName);
         Files.createDirectories(targetFolder);
 
         long timestamp = System.currentTimeMillis();
@@ -157,12 +158,12 @@ public class SharedSignatureService {
         String dataUrl = request.getDataUrl();
         if (dataUrl != null && dataUrl.startsWith("data:image/")) {
             // Extract base64 data
-            String base64Data = dataUrl.substring(dataUrl.indexOf(",") + 1);
+            String base64Data = dataUrl.substring(dataUrl.indexOf(',') + 1);
             byte[] imageBytes = Base64.getDecoder().decode(base64Data);
 
             // Determine and validate file extension from data URL
-            String mimeType = dataUrl.substring(dataUrl.indexOf(":") + 1, dataUrl.indexOf(";"));
-            String rawExtension = mimeType.substring(mimeType.indexOf("/") + 1);
+            String mimeType = dataUrl.substring(dataUrl.indexOf(':') + 1, dataUrl.indexOf(';'));
+            String rawExtension = mimeType.substring(mimeType.indexOf('/') + 1);
             String extension = validateAndNormalizeExtension(rawExtension);
 
             // Save image file only
@@ -191,7 +192,7 @@ public class SharedSignatureService {
         List<SavedSignatureResponse> signatures = new ArrayList<>();
 
         // Load personal signatures
-        Path personalFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path personalFolder = Path.of(SIGNATURE_BASE_PATH, username);
         if (Files.exists(personalFolder)) {
             try (Stream<Path> stream = Files.list(personalFolder)) {
                 stream.filter(this::isImageFile)
@@ -222,7 +223,7 @@ public class SharedSignatureService {
         }
 
         // Load shared signatures
-        Path sharedFolder = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+        Path sharedFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
         if (Files.exists(sharedFolder)) {
             try (Stream<Path> stream = Files.list(sharedFolder)) {
                 stream.filter(this::isImageFile)
@@ -260,7 +261,7 @@ public class SharedSignatureService {
         validateFileName(signatureId);
 
         // Try to find and delete image file in personal folder
-        Path personalFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path personalFolder = Path.of(SIGNATURE_BASE_PATH, username);
         boolean deleted = false;
 
         if (Files.exists(personalFolder)) {
@@ -281,7 +282,7 @@ public class SharedSignatureService {
 
         // Try shared folder if not found in personal
         if (!deleted) {
-            Path sharedFolder = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+            Path sharedFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
             if (Files.exists(sharedFolder)) {
                 try (Stream<Path> stream = Files.list(sharedFolder)) {
                     List<Path> matchingFiles =
