@@ -8,7 +8,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -82,7 +81,7 @@ public class TelegramPipelineBot extends TelegramLongPollingBot {
 
     @PostConstruct
     public void register() {
-        if (StringUtils.isAnyBlank(getBotUsername(), getBotToken())) {
+        if (StringUtils.isAnyBlank(getBotUsername(), this.telegramProperties.getBotToken())) {
             log.warn("Telegram bot disabled because botToken or botUsername is not configured");
             return;
         }
@@ -392,7 +391,7 @@ public class TelegramPipelineBot extends TelegramLongPollingBot {
                     new URI(
                             "https",
                             "api.telegram.org",
-                            "/file/bot" + getBotToken() + "/" + filePath,
+                            "/file/bot" + this.telegramProperties.getBotToken() + "/" + filePath,
                             null);
             return uri.toURL();
         } catch (URISyntaxException e) {
@@ -411,7 +410,7 @@ public class TelegramPipelineBot extends TelegramLongPollingBot {
 
     private Path getInboxFolder(Long chatId) throws IOException {
         Path baseInbox =
-                Paths.get(
+                Path.of(
                         runtimePathConfig.getPipelineWatchedFoldersPath(),
                         telegramProperties.getPipelineInboxFolder());
 
@@ -445,7 +444,7 @@ public class TelegramPipelineBot extends TelegramLongPollingBot {
 
     private List<Path> waitForPipelineOutputs(PipelineFileInfo info) throws IOException {
 
-        Path finishedDir = Paths.get(runtimePathConfig.getPipelineFinishedFoldersPath());
+        Path finishedDir = Path.of(runtimePathConfig.getPipelineFinishedFoldersPath());
         Files.createDirectories(finishedDir);
 
         Instant start = info.savedAt();
@@ -515,10 +514,5 @@ public class TelegramPipelineBot extends TelegramLongPollingBot {
     @Override
     public String getBotUsername() {
         return telegramProperties.getBotUsername();
-    }
-
-    @Override
-    public String getBotToken() {
-        return telegramProperties.getBotToken();
     }
 }
