@@ -5,16 +5,14 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.springframework.stereotype.Service;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -22,6 +20,8 @@ import stirling.software.common.configuration.InstallationPathConfig;
 import stirling.software.common.service.PersonalSignatureServiceInterface;
 import stirling.software.proprietary.model.api.signature.SavedSignatureRequest;
 import stirling.software.proprietary.model.api.signature.SavedSignatureResponse;
+
+import tools.jackson.databind.ObjectMapper;
 
 /**
  * Service for managing user signatures with authentication and storage limits. This proprietary
@@ -32,17 +32,19 @@ import stirling.software.proprietary.model.api.signature.SavedSignatureResponse;
 @Slf4j
 public class SignatureService implements PersonalSignatureServiceInterface {
 
+    private static final Pattern FILENAME_VALIDATION_PATTERN = Pattern.compile("^[a-zA-Z0-9_.-]+$");
     private final String SIGNATURE_BASE_PATH;
-    private final String ALL_USERS_FOLDER = "ALL_USERS";
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    private static final String ALL_USERS_FOLDER = "ALL_USERS";
+    private final ObjectMapper objectMapper;
 
     // Storage limits per user
     private static final int MAX_SIGNATURES_PER_USER = 20;
     private static final long MAX_SIGNATURE_SIZE_BYTES = 2_000_000; // 2MB per signature
     private static final long MAX_TOTAL_USER_STORAGE_BYTES = 20_000_000; // 20MB total per user
 
-    public SignatureService() {
+    public SignatureService(ObjectMapper objectMapper) {
         SIGNATURE_BASE_PATH = InstallationPathConfig.getSignaturesPath();
+        this.objectMapper = objectMapper;
     }
 
     /**
@@ -52,7 +54,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
     @Override
     public byte[] getPersonalSignatureBytes(String username, String fileName) throws IOException {
         validateFileName(fileName);
-        Path userPath = Paths.get(SIGNATURE_BASE_PATH, username, fileName);
+        Path userPath = Path.of(SIGNATURE_BASE_PATH, username, fileName);
 
         if (!Files.exists(userPath)) {
             throw new FileNotFoundException("Personal signature not found");
@@ -73,7 +75,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         }
 
         String folderName = "shared".equals(scope) ? ALL_USERS_FOLDER : username;
-        Path targetFolder = Paths.get(SIGNATURE_BASE_PATH, folderName);
+        Path targetFolder = Path.of(SIGNATURE_BASE_PATH, folderName);
 
         // Only enforce limits for personal signatures (not shared)
         if ("personal".equals(scope)) {
@@ -112,7 +114,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
             }
 
             // Extract base64 data
-            String base64Data = dataUrl.substring(dataUrl.indexOf(",") + 1);
+            String base64Data = dataUrl.substring(dataUrl.indexOf(',') + 1);
             byte[] imageBytes = Base64.getDecoder().decode(base64Data);
 
             // Validate decoded size
@@ -124,8 +126,8 @@ public class SignatureService implements PersonalSignatureServiceInterface {
             }
 
             // Determine and validate file extension from data URL
-            String mimeType = dataUrl.substring(dataUrl.indexOf(":") + 1, dataUrl.indexOf(";"));
-            String rawExtension = mimeType.substring(mimeType.indexOf("/") + 1);
+            String mimeType = dataUrl.substring(dataUrl.indexOf(':') + 1, dataUrl.indexOf(';'));
+            String rawExtension = mimeType.substring(mimeType.indexOf('/') + 1);
             String extension = validateAndNormalizeExtension(rawExtension);
 
             // Save image file
@@ -167,13 +169,13 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         List<SavedSignatureResponse> signatures = new ArrayList<>();
 
         // Load personal signatures
-        Path personalFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path personalFolder = Path.of(SIGNATURE_BASE_PATH, username);
         if (Files.exists(personalFolder)) {
             signatures.addAll(loadSignaturesFromFolder(personalFolder, "personal", true));
         }
 
         // Load shared signatures
-        Path sharedFolder = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+        Path sharedFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
         if (Files.exists(sharedFolder)) {
             signatures.addAll(loadSignaturesFromFolder(sharedFolder, "shared", false));
         }
@@ -186,7 +188,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         validateFileName(signatureId);
 
         // Only allow deletion from personal folder
-        Path personalFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path personalFolder = Path.of(SIGNATURE_BASE_PATH, username);
         boolean deleted = false;
 
         if (Files.exists(personalFolder)) {
@@ -224,7 +226,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         validateFileName(signatureId);
 
         // Try personal folder first
-        Path personalFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path personalFolder = Path.of(SIGNATURE_BASE_PATH, username);
         Path metadataPath = personalFolder.resolve(signatureId + ".json");
 
         if (Files.exists(metadataPath)) {
@@ -234,7 +236,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         }
 
         // If not found in personal, try shared folder
-        Path sharedFolder = Paths.get(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+        Path sharedFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
         Path sharedMetadataPath = sharedFolder.resolve(signatureId + ".json");
 
         if (Files.exists(sharedMetadataPath)) {
@@ -244,6 +246,12 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         }
 
         throw new FileNotFoundException("Signature metadata not found");
+    }
+
+    public boolean isSharedSignature(String signatureId) {
+        validateFileName(signatureId);
+        Path sharedFolder = Path.of(SIGNATURE_BASE_PATH, ALL_USERS_FOLDER);
+        return Files.exists(sharedFolder.resolve(signatureId + ".json"));
     }
 
     private void updateMetadataLabel(Path metadataPath, String newLabel) throws IOException {
@@ -265,7 +273,7 @@ public class SignatureService implements PersonalSignatureServiceInterface {
     // Private helper methods
 
     private void enforceStorageLimits(String username, String dataUrlToAdd) throws IOException {
-        Path userFolder = Paths.get(SIGNATURE_BASE_PATH, username);
+        Path userFolder = Path.of(SIGNATURE_BASE_PATH, username);
 
         if (!Files.exists(userFolder)) {
             return; // First signature, no limits to check
@@ -366,14 +374,14 @@ public class SignatureService implements PersonalSignatureServiceInterface {
         if (fileName.contains("..") || fileName.contains("/") || fileName.contains("\\")) {
             throw new IllegalArgumentException("Invalid filename");
         }
-        if (!fileName.matches("^[a-zA-Z0-9_.-]+$")) {
+        if (!FILENAME_VALIDATION_PATTERN.matcher(fileName).matches()) {
             throw new IllegalArgumentException("Filename contains invalid characters");
         }
     }
 
     private String validateAndNormalizeExtension(String extension) {
         String normalized = extension.toLowerCase().trim();
-        if (normalized.equals("png") || normalized.equals("jpg") || normalized.equals("jpeg")) {
+        if ("png".equals(normalized) || "jpg".equals(normalized) || "jpeg".equals(normalized)) {
             return normalized;
         }
         throw new IllegalArgumentException("Unsupported image extension: " + extension);
